--- a/Opdracht 2/package.json
+++ b/Opdracht 2/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "booky",
-  "version": "0.0.0",
+  "name": "Nerdy-Shirt-Creator",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
